--- a/vagrant/setup/requirements.yml
+++ b/vagrant/setup/requirements.yml
@@ -1,16 +1,15 @@
 # Install a role from a specific git branch
 - name: packages
-  src: https://armory.galaxy3.net/vagrant/pkgs
-  version: armory
+  src: https://raw.githubusercontent.com/galaxy3-net/armory/armory/vagrant/pkgs/
 
 - name: named
-  src: https://armory.galaxy3.net/vagrant/ansible_named
+  src: https://github.com/galaxy3-net/ansible_named
   version: named
 
 - name: xrdp
-  src: https://armory.galaxy3.net/vagrant/ansible_xrdp
+  src: https://github.com/galaxy3-net/ansible_xrdp
   version: xrdp
 
 - name: week-10-day-2
-  src: https://armory.galaxy3.net/vagrant/week-10-day-2
+  src: https://github.com/galaxy3-net/week-10-day-2
 
