--- a/vagrant/pkgs/files/etc/ansible/requirements.yml
+++ b/vagrant/pkgs/files/etc/ansible/requirements.yml
@@ -3,11 +3,11 @@
   src: https://github.com/galaxy3-net/pkgs.git
 
 - name: named
-  src: https://armory.galaxy3.net/vagrant/ansible_named
+  src: https://github.com/galaxy3-net/ansible_named.git
   version: named
 
 - name: xrdp
-  src: https://armory.galaxy3.net/vagrant/ansible_xrdp
+  src: https://github.com/galaxy3-net/ansible_xrdp.git
   version: xrdp
 
 - name: week-10-day-2
