--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -4,11 +4,11 @@ web:
   hostname: 'localhost'
   environment:
     GITLAB_OMNIBUS_CONFIG: |
-      external_url 'http://localhost/'
+      external_url 'http://localhost:8081/'
       #external_url 'https://gitlab.example.com'
       # Add any other gitlab.rb configuration here, each on its own line
   ports:
-    - '80:80'
+    - '8081:80'
     - '443:443'
     - '22:22'
   volumes:
