--- a/gitlab/docker-compose.yml
+++ b/gitlab/docker-compose.yml
@@ -4,7 +4,7 @@ web:
   hostname: 'localhost'
   environment:
     GITLAB_OMNIBUS_CONFIG: |
-      external_url 'http://localhost:8081/'
+      #external_url 'http://localhost:8081/'
       #external_url 'https://gitlab.example.com'
       # Add any other gitlab.rb configuration here, each on its own line
   ports:
