--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -1,14 +1,12 @@
-version: "3.6"
-
-services:
-  so1:
-    image: ${SPLUNK_IMAGE:-splunk/splunk:latest}
-    container_name: so1
-    environment:
-      - SPLUNK_START_ARGS=--accept-license
-      - SPLUNK_PASSWORD='cybersecurity'
-    ports:
-      - 8000:8000
-    volumes:
-      - '/splunk/etc:/opt/splunk/etc'
-      - '/splunk/var:/opt/splunk/var'
+splunk:
+  image: ${SPLUNK_IMAGE:-splunk/splunk:latest}
+  restart: always
+  hostname: 'localhost'
+  environment:
+    - SPLUNK_START_ARGS=--accept-license
+    - SPLUNK_PASSWORD='cybersecurity'
+  ports:
+    - 8000:8000
+  volumes:
+    - '/splunk/etc:/opt/splunk/etc'
+    - '/splunk/var:/opt/splunk/var'
