--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -2,6 +2,7 @@ splunk:
   image: splunk/splunk:latest
   restart: always
   hostname: 'localhost'
+  container_name: splunk
   environment:
     - SPLUNK_START_ARGS=--accept-license
     - SPLUNK_PASSWORD='cybersecurity'
