--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -3,6 +3,7 @@ splunk:
   restart: always
   hostname: 'localhost'
   container_name: splunk
+  entrypoint: /sbin/entrypoint.sh ; tail -f /dev/null
   environment:
     - SPLUNK_START_ARGS=--accept-license
     - SPLUNK_PASSWORD='cybersecurity'
