--- a/splunk/Docker/Dockerfile
+++ b/splunk/Docker/Dockerfile
@@ -2,4 +2,4 @@ FROM splunk/splunk:latest
 LABEL maintainer="korben@kirscht.com"
 
 COPY  sbin/g3_entrypoint /sbin/g3_entrypoint
-RUN   chmod +x /sbin/g3_entrypoint
+RUN   sudo chmod +x /sbin/g3_entrypoint
