--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -10,5 +10,5 @@ splunk:
   ports:
     - 8000:8000
   volumes:
-    - '/splunk/etc:/opt/splunk/etc'
-    - '/splunk/var:/opt/splunk/var'
+    - '/splunk/etc:/opt/splunk/etc:rw'
+    - '/splunk/var:/opt/splunk/var:rw'
