--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.6"
 
-volumes:
-  opt_splunk_etc:
-    external: true
-  opt_splunk_var:
-    external: true
+#volumes:
+#  opt_splunk_etc:
+#    external: true
+#  opt_splunk_var:
+#    external: true
 
 
 services:
