--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -12,7 +12,7 @@ version: "3.6"
 services:
   splunk:
     image: g3splunk
-    # user: splunk
+    user: splunk
     restart: always
     container_name: splunk
     entrypoint: /sbin/g3_entrypoint
