--- a/dhcp/data/dhcpd.conf
+++ b/dhcp/data/dhcpd.conf
@@ -35,3 +35,8 @@ host tattooine {
     hardware ethernet 08:00:27:AA:AB:AA;
     fixed-address 10.55.56.52;
 }
+
+host tattooinev2l {
+    hardware ethernet 08:00:27:AA:AB:AB;
+    fixed-address 10.55.56.49;
+}
