--- a/dhcp/data/dhcpd.conf
+++ b/dhcp/data/dhcpd.conf
@@ -16,27 +16,33 @@ subnet 10.55.55.0 netmask 255.255.255.0 {
 #}
 
 host kamino-eth2 {
-    hardware ethernet 08:00:27:AA:AA:AB;
+    hardware ethernet 08:00:27:37:38:04;
     fixed-address 10.55.56.4;
 }
 
 host kamino-eth3 {
-    hardware ethernet 08:00:27:AA:AA:AC;
+    hardware ethernet 08:00:27:37:38:0A;
     fixed-address 10.55.56.10;
 }
 
 host kamino {
-    hardware ethernet 08:00:27:AA:AA:AA;
+    hardware ethernet 08:00:27:37:37:04;
     fixed-address 10.55.55.4;
 }
-# mac: "080027aaaaab",
 
 host tattooine {
-    hardware ethernet 08:00:27:AA:AB:AA;
+    hardware ethernet 08:00:27:37:38:34;
     fixed-address 10.55.56.52;
 }
 
 host tattooinev2l {
-    hardware ethernet 08:00:27:AA:AB:AB;
+    hardware ethernet 08:00:27:37:38:32;
     fixed-address 10.55.56.50;
 }
+
+#  Kamino  |  eth2 | 08:00:27:37:37:04; | 10.55.55.4
+#  Kamino  |  eth2 | 08:00:27:37:38:04; | 10.55.56.4
+#  Kamino  |  eth3 | 08:00:27:37:38:0A; | 10.55.56.10
+
+#  tattooine  |  eth1  |  08:00:27:37:38:34;  |  10.55.56.52
+#  tattooinev2l  |  eth1  |  08:00:27:37:38:32;  |  10.55.56.50
