--- a/dhcp/data/dhcpd.conf
+++ b/dhcp/data/dhcpd.conf
@@ -15,6 +15,11 @@ subnet 10.55.55.0 netmask 255.255.255.0 {
 #  range 10.55.56.10 10.55.56.30;
 #}
 
+host corellia {
+    hardware ethernet 08:00:27:37:37:09;
+    fixed-address 10.55.55.9;
+}
+
 host kamino-eth2 {
     hardware ethernet 08:00:27:37:38:04;
     fixed-address 10.55.56.4;
@@ -39,6 +44,8 @@ host tattooinev2l {
     hardware ethernet 08:00:27:37:38:32;
     fixed-address 10.55.56.50;
 }
+
+#  corellia  |  eth1  |  08:00:27:37:37:09; | 10.55.55.9
 
 #  Kamino  |  eth2 | 08:00:27:37:37:04; | 10.55.55.4
 #  Kamino  |  eth2 | 08:00:27:37:38:04; | 10.55.56.4
