--- a/dhcp/data/dhcpd.conf
+++ b/dhcp/data/dhcpd.conf
@@ -16,8 +16,8 @@ subnet 10.55.55.0 netmask 255.255.255.0 {
 #}
 
 host corellia {
-    hardware ethernet 08:00:27:37:37:09;
-    fixed-address 10.55.55.9;
+    hardware ethernet 08:00:27:37:37:0F;
+    fixed-address 10.55.55.15;
 }
 
 host kamino-eth2 {
@@ -45,7 +45,7 @@ host tattooinev2l {
     fixed-address 10.55.56.50;
 }
 
-#  corellia  |  eth1  |  08:00:27:37:37:09; | 10.55.55.9
+#  corellia  |  eth1  |  08:00:27:37:37:0F; | 10.55.55.15
 
 #  Kamino  |  eth2 | 08:00:27:37:37:04; | 10.55.55.4
 #  Kamino  |  eth2 | 08:00:27:37:38:04; | 10.55.56.4
