--- a/splunk/docker-compose.yml
+++ b/splunk/docker-compose.yml
@@ -11,7 +11,7 @@ version: "3.6"
 
 services:
   splunk:
-    image: g3splunk
+    build: Docker/.
     user: splunk
     restart: always
     container_name: splunk
