--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -91,7 +91,6 @@
         backup: yes
 
     - name: Run setup
-      command:
-        cmd: "unix_setup.sh"
+      command: "unix_setup.sh"
         args:
           chdir: "/Downloads/autopsy-4.19.1"
