--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -91,6 +91,6 @@
         backup: yes
 
     - name: Run setup
-      command: "./unix_setup.sh"
+      command: ". /etc/profile ; ./unix_setup.sh"
       args:
         chdir: "/Downloads/autopsy-4.19.1"
