--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -95,3 +95,7 @@
       become: yes
       args:
         chdir: "/Downloads/autopsy-4.19.1"
+      register: output
+
+    - name: debug
+      debug: output
