--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -91,9 +91,7 @@
         backup: yes
 
     - name: Run setup
-      command:
-        - pwd
-        - ls
+      command: pwd
       become: yes
       args:
         chdir: "/Downloads/autopsy-4.19.1"
