--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -90,11 +90,16 @@
         insertafter: EOF
         backup: yes
 
+
+
+
     - name: Run setup
       command: 'pwd ; ls -l'
       become: yes
       args:
         chdir: "/Downloads/autopsy-4.19.1"
+      environment:
+        JAVA_HOME: /usr/lib/jvm/bellsoft-java8-full-amd64
       ignore_errors: True
       register: results
 
