--- a/vagrant/setup/files/etc/ansible/requirements.yml
+++ b/vagrant/setup/files/etc/ansible/requirements.yml
@@ -13,3 +13,5 @@
 - name: week-10-day-2
   src: https://github.com/galaxy3-net/week-10-day-2
 
+- name: armory
+  src: https://github.com/galaxy3-net/armory
