--- a/vagrant/setup/files/etc/ansible/requirements.yml
+++ b/vagrant/setup/files/etc/ansible/requirements.yml
@@ -14,4 +14,4 @@
   src: https://github.com/galaxy3-net/week-10-day-2
 
 - name: armory
-  src: https://github.com/galaxy3-net/armory
+  src: https://github.com/galaxy3-net/ansible_armory
