--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -17,34 +17,42 @@
       - libmagickcore-dev
       - libde265
       - libheif
-
-  tasks:
-
-    - name: Download
-      get_url:
+    urls:
+      - {
         url: 'https://github.com/sleuthkit/autopsy/releases/download/autopsy-4.19.1/autopsy-4.19.1.zip'
         dest: '/Downloads/autopsy-4.19.1.zip'
-        mode: '0440'
+      }
 
-    - name: Unarchive
-      unarchive:
-        src:  '/Downloads/autopsy-4.19.1.zip'
-        dest: '/Downloads/'
-        remote_src: yes
-        creates: '/Downloads/autopsy-4.19.1'
+          tasks:
 
-#    - name: Download DEB
-#      get_url:
-#        url: 'https://github.com/sleuthkit/sleuthkit/releases/download/sleuthkit-4.11.0/sleuthkit-java_4.11.0-1_amd64.deb'
-#        dest: '/Downloads/sleuthkit-java_4.11.0-1_amd64.deb'
-#        mode: '0440'
+            - name: Download
+              get_url:
+                url: "{ itam.url }"
+                dest: "{ item.dest }"
+                mode: '0440'
+              loop:
+                - { urls }
 
-    - name: Install DEB
-      apt:
-        deb: 'https://github.com/sleuthkit/sleuthkit/releases/download/sleuthkit-4.11.0/sleuthkit-java_4.11.0-1_amd64.deb'
+            - name: Unarchive
+              unarchive:
+                src:  '/Downloads/autopsy-4.19.1.zip'
+                dest: '/Downloads/'
+                remote_src: yes
+                creates: '/Downloads/autopsy-4.19.1'
+
+            #    - name: Download DEB
+            #      get_url:
+            #        url: 'https://github.com/sleuthkit/sleuthkit/releases/download/sleuthkit-4.11.0/sleuthkit-java_4.11.0-1_amd64.deb'
+            #        dest: '/Downloads/sleuthkit-java_4.11.0-1_amd64.deb'
+            #        mode: '0440'
+
+            - name: Install DEB
+              apt:
+                deb: 'https://github.com/sleuthkit/sleuthkit/releases/download/sleuthkit-4.11.0/sleuthkit-java_4.11.0-1_amd64.deb'
 
 
-    - name: Add an Apt signing key, uses whichever key is at the URL
+            - name: Add an Apt signing key
+      }, uses whichever key is at the URL
       ansible.builtin.apt_key:
         url: "https://download.bell-sw.com/pki/GPG-KEY-bellsoft"
         state: present
@@ -107,13 +115,13 @@
       debug:
         var: results
 
-    - name: Directories
-      file:
-        path: /root/autopsy-files
-        owner: root
-        group: root
-        mode: 0755
-        state: directory
+#    - name: Directories
+#      file:
+#        path: /root/autopsy-files
+#        owner: root
+#        group: root
+#        mode: 0755
+#        state: directory
 
     - name: Create a symbolic link
       ansible.builtin.file:
