--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -19,7 +19,7 @@
       - libheif
     urls:
       - {
-        url: 'https://github.com/sleuthkit/autopsy/releases/download/autopsy-4.19.1/autopsy-4.19.1.zip'
+        url: 'https://github.com/sleuthkit/autopsy/releases/download/autopsy-4.19.1/autopsy-4.19.1.zip',
         dest: '/Downloads/autopsy-4.19.1.zip'
       }
 
