--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -20,14 +20,15 @@
     urls:
       - { url: 'https://github.com/sleuthkit/autopsy/releases/download/autopsy-4.19.1/autopsy-4.19.1.zip',
         dest: '/Downloads/autopsy-4.19.1.zip'  }
+      - { url: 'http://downloads.digitalcorpora.org/corpora/scenarios/2012-ngdc/carry-phone/carry-phone-2012-07-15-final.zip' }'
 
   tasks:
 
       - name: Download
         get_url:
-          url: "{ itam.url }"
-          dest: "{ item.dest }"
-          mode: '0440'
+          url: "{ item.url }"
+          dest: "{ item.dest | default('/Downloads') }"
+          mode: "{ item.mode | degault('0440') }"
         loop:
           - { urls }
 
