--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -20,7 +20,7 @@
     urls:
       { url: 'https://github.com/sleuthkit/autopsy/releases/download/autopsy-4.19.1/autopsy-4.19.1.zip',
         dest: '/Downloads/autopsy-4.19.1.zip'  }
-      # - { url: 'http://downloads.digitalcorpora.org/corpora/scenarios/2012-ngdc/carry-phone/carry-phone-2012-07-15-final.zip' }'
+      { url: 'http://downloads.digitalcorpora.org/corpora/scenarios/2012-ngdc/carry-phone/carry-phone-2012-07-15-final.zip' }'
 
   tasks:
 
