--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -46,7 +46,7 @@
         dest: "{{ item.dest | default('/Downloads') }}"
         mode: "{{ item.mode | default('0440') }}"
       loop:
-        - "{{ urls }}"
+        "{{ urls }}"
 
     - name: Unarchive
       unarchive:
