--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -162,13 +162,13 @@
 
 
 
-    - name: Download
-      get_url:
-        url: "{{ item.url }}"
-        dest: "{{ item.dest | default('/Downloads') }}"
-        mode: "{{ item.mode | default('0440') }}"
-      loop:
-        "{{ urls }}"
+#    - name: Download
+#      get_url:
+#        url: "{{ item.url }}"
+#        dest: "{{ item.dest | default('/Downloads') }}"
+#        mode: "{{ item.mode | default('0440') }}"
+#      loop:
+#        "{{ urls }}"
 
     - name: Unarchive
       unarchive:
