--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -160,7 +160,8 @@
       loop:
         "{{ dirs }}"
 
-
+    - name: Test Include
+      include: test.yml
 
 #    - name: Download
 #      get_url:
