--- a/autopsy/test.yml
+++ b/autopsy/test.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: Test Download Zip
-  hosts: 127.0.0.1
-  connection: local
-  become: yes
+#- name: Test Download Zip
+#  hosts: 127.0.0.1
+#  connection: local
+#  become: yes
 
-  tasks:
+#  tasks:
 
     - name: test Debug
       debug:
