--- a/autopsy/autopsy.yml
+++ b/autopsy/autopsy.yml
@@ -161,7 +161,9 @@
         "{{ dirs }}"
 
     - name: Test Include
-      include: test.yml my_msg="korben"
+      include: test.yml
+      vars:
+        my_msg: "korben"
 
 #    - name: Download
 #      get_url:
