--- a/autopsy/test.yml
+++ b/autopsy/test.yml
@@ -17,7 +17,7 @@
 - name: Debug
   debug:
     msg: "Ansible When File Exists Example."
-  when: result.stat.exists
+  when: not result.stat.exists
 
 #    - name: Download
 #      get_url:
