--- a/named/docker-compose.yml
+++ b/named/docker-compose.yml
@@ -4,9 +4,10 @@ version: "3.6"
 services:
   named:
     build: Docker/.
-    user: ${__CONTAINER_USER__}
+    #user: ${__CONTAINER_USER__}
     restart: always
-    container_name: ${__NAME__}
+    container_name: named
+    entrypoint: /sbin/g3_entrypoint
     ports:
       - 10.55.55.2:53:53/tcp
       - 10.55.55.2:53:53/udp
