--- a/named/docker-compose.yml
+++ b/named/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     #user: ${__CONTAINER_USER__}
     restart: always
     container_name: named
-    entrypoint: /sbin/g3_entrypoint
+#    entrypoint: /sbin/g3_entrypoint
 #    ports:
 #      - 10.55.55.2:53:53/tcp
 #      - 10.55.55.2:53:53/udp
