--- a/named/Docker/files/etc/resolv.conf
+++ b/named/Docker/files/etc/resolv.conf
@@ -10,7 +10,9 @@
 # See man:systemd-resolved.service(8) for details about the supported modes of
 # operation for /etc/resolv.conf.
 
-nameserver 10.55.55.3
-nameserver 192.168.1.254
+nameserver 10.55.55.2
 nameserver 8.8.8.8
-search attlocal.net
+nameserver 8.8.4.4
+nameserver 127.0.0.53
+
+search galaxy3.net modell.galaxy3.net
