--- a/named/Docker/files/etc/resolv.conf
+++ b/named/Docker/files/etc/resolv.conf
@@ -15,4 +15,4 @@ nameserver 8.8.8.8
 nameserver 8.8.4.4
 nameserver 127.0.0.53
 
-search galaxy3.net modell.galaxy3.net
+search galaxy3.net moddell.galaxy3.net
