--- a/named/.env
+++ b/named/.env
@@ -4,7 +4,7 @@ __CONTAINER_IMAGE__=g3named
 
 __CONTAINER_USER__=root
 
-__DOMAIN_LIST__=(galaxy3.net moddell.galaxy3.net arkanis.galaxy3.net pvt.galaxy3.net)
+__DOMAIN_LIST__=("galaxy3.net" "moddell.galaxy3.net" "arkanis.galaxy3.net" "pvt.galaxy3.net")
 
 #  source ./.env
 #  ${__NAME__}
