--- a/named/.env
+++ b/named/.env
@@ -6,5 +6,7 @@ __CONTAINER_USER__=root
 
 __DOMAIN_LIST__=("galaxy3.net" "moddell.galaxy3.net" "arkanis.galaxy3.net" "pvt.galaxy3.net")
 
+__INTERFACE__=$(netstat -r | awk '$1 == "10.55.55.0" {print $8}')
+
 #  source ./.env
 #  ${__NAME__}
