--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -14,7 +14,7 @@
     #    pkg: "kubuntu-desktop"
     #    state: build-dep
 
-- name: Install Packages
+- name: Install Packages Part I
   apt:
     pkg: "{{ apt.pkgs_1 }}"
     autoclean: true
@@ -26,7 +26,7 @@
     #state: latest
   become: true
 
-- name: Install Packages
+- name: Install Packages Part II
   apt:
     pkg: "{{ apt.pkgs_2 }}"
     autoclean: true
