--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -75,7 +75,6 @@
 - name: CRON for DHCPD
   cron:
     name: "start_vmc"
+    user: "vagrant"
     special_time: "reboot"
     job: "/Armory/vnc && ./setup.sh"
-  become: true
-
