--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -78,3 +78,10 @@
     user: "vagrant"
     special_time: "reboot"
     job: "/Armory/vnc/setup.sh"
+
+- name: permit VNC
+  ansible.posix.firewalld:
+    service: vnc
+    permanent: yes
+    state: enabled
+  become: true
