--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -65,6 +65,7 @@
   command: ./check.sh 1
   register: check_output
   become_user: "vagrant"
+  become: true
   ignore_errors: true
 
 - name: Show all output fro the netstat command.
@@ -76,6 +77,7 @@
   command: '/usr/bin/vncserver -localhost no :1'
   become: yes
   become_user: "vagrant"
+  become: true
   when: check_output.failed
 
 # VNC Setup for Instructor on port 5902
