--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -95,9 +95,7 @@
 
 - name: Start VNC service for vagrant on display :2
   command:
-    cmd: /usr/bin/vncserver -localhost no -name instructor
-    stdin: " "
-    stdin_add_newline: yes
+    cmd: /Armory/vnc/startserver.sh
     chdir: /home/instructor
   become: yes
   become_user: "instructor"
