--- a/vnc/roles/vnc/tasks/main.yml
+++ b/vnc/roles/vnc/tasks/main.yml
@@ -74,7 +74,7 @@
   when: check_output.failed
 
 - name: Start VNC service for vagrant on display :1
-  command: '/usr/bin/vncserver -localhost no'
+  command: ./startserver.sh vagrant
   become: yes
   become_user: "vagrant"
   become: true
@@ -95,8 +95,7 @@
 
 - name: Start VNC service for vagrant on display :2
   command:
-    cmd: /Armory/vnc/startserver.sh
-    chdir: /home/instructor
+    cmd: /Armory/vnc/startserver.sh instructor
   become: yes
   become_user: "instructor"
   when: check_output.failed
